intel/bench_214_work/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main/log.txt
bench_214_work/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main.c:40:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const Gx1;
                ^
                    = nullptr
bench_214_work/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_multCTQC_with_main.c:41:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const Gx2;
                ^
                    = nullptr
3 errors generated.
HLS FPGA Parse FAILED.
